made whitespace error resolve

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -26,13 +26,9 @@
     body {
         overflow-x: hidden;
     }
-      .menu {
-        background-color: transparent;
-        display: block;
-        border: none;
-        position: absolute;
-        right: 5%;
-      }
+    html {
+        overflow-x: hidden;
+    }  
       .line {
         fill: none;
         stroke: var(--white);
@@ -73,14 +69,16 @@
         position: fixed;
         top: 0px;
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         align-items: center;
         backdrop-filter: blur(15px);
         background-color: #0a192f73;
         z-index: 100;
         transition: 500ms;
         padding: 6vh 6vw;
-        width: 90vw;
+        width: 99vw;
+        flex-direction: row-reverse;
+
     }
     header img {
         width: 45px;
@@ -115,6 +113,11 @@
         cursor: pointer;
         transition: 1s;
     }
+    .menu {
+        background-color: transparent;
+        display: block;
+        border: none;
+      }
     .menu-show {
         animation: slide 700ms forwards;
     }
@@ -134,18 +137,19 @@
         bottom: 15vh;
         }
     .left-ul {
-       display: none;
+       left: 2vw;
     }
     .right-ul {
         display: none;
     }
     .intro {
         height: 80vh;
-        /* display: flex; */
+        display: flex;
         flex-direction: column;
-        margin: 20vh var(--padding-main) 1vh;
+        margin: 15vh var(--padding-main) 1vh;
         line-height: 2;
-        width: 100%;
+        position: relative;
+        padding: 0 2vw;
      }
      .intro h1 {
          font-size: 2.8rem;
