--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ header a:hover {
     transition: 1s;
 }
 .menu {
-    position: absolute;
+    
 
     display: none;
 }
